# Euclid-MCP

./: .dockerignore  .gitignore  .ignore  .opencode.json  AGENTS.md  CHANGELOG.md  Dockerfile  IDEAS.md  LICENSE  NEXT_STEP.md  README.md  TODO.md  docker-compose.yml  glama.json  opencode.json  pyproject.toml  server.json
.github/workflows/: publish.yml
benchmarks/: BENCHMARKS.md  rbac_1000.py  reasoning_benchmark.py
docs/: EUCLID_IR.md  EVALUATION.md
euclid_mcp/: __init__.py  language.py  models.py  prolog_bridge.py  sanitizer.py  server.py  translator.py
examples/: 01_genealogy.py  02_rbac.py  03_classification.py  04_loan_eligibility.py
examples/05_compliance_auditor/: auditor.py  cloud_resources.json  compliance_policies.euclid
examples/06_loan_eligibility/: applicants.csv  loan_officer.py  loan_policies.euclid
examples/07_it_security_compliance/: README.md  benchmark_comparison.py  demo.py  questions.py
examples/07_it_security_compliance/data/: extract_from_postgres.py  generate_rbac_data.py  generated_facts.euclid  it_security_small.euclid  schema.sql  small_generated_facts.euclid
examples/07_it_security_compliance/data/queries/: assignments.sql  permissions.sql  resources.sql  roles.sql  users.sql
examples/07_it_security_compliance/policies/: access_control.euclid  approval_workflows.euclid  data_classification.euclid  environment_tiers.euclid  role_hierarchy.euclid
examples/07_it_security_compliance/standards/: aws_iam_patterns.euclid  cis_benchmarks.euclid
examples/08_cluedo/: cluedo.py  cluedo_rules.euclid  game_states.py
examples/12_kb_check/: broken.knowledge  demo.py  valid.knowledge
integrations/: README.md  euclid_api.py  euclid_cli.py
tests/: test_language.py  test_prolog_bridge.py  test_security.py  test_tools.py  test_translator.py
