[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euclid-mcp"
version = "0.1.2"
description = "MCP server for deterministic logical reasoning via Prolog — transforms facts into formal proofs"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Euclid-MCP contributors" }
]
keywords = ["mcp", "prolog", "reasoning", "logic", "proof-trees", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.27",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.urls]
homepage = "https://github.com/meo/euclid-mcp"
repository = "https://github.com/meo/euclid-mcp"

[project.scripts]
euclid-mcp = "euclid_mcp:main"

[tool.setuptools.packages.find]
include = ["euclid_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
